# rirme

./: .gitignore  README.md  pyproject.toml  setup.py
rirme/: __init__.py  analyzing.py  conf.py  config.rirme.yml  containers.py  measuring.py  shell.py
